--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background_dark">#0D1117</color>
     <color name="surface_dark">#161B22</color>
+    
+    <!-- Launcher Icon -->
+    <color name="ic_launcher_background">#0D1117</color>
 </resources>
